<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUserActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/circle"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/make_music_together"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/sign_up_here"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/sign_up_user_name"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="15dp"
        android:inputType="text"
        android:elevation="2dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/name"
        android:paddingStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:elevation="2dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/email_or_phone_number"
        android:paddingStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_user_name" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:elevation="1dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/password"
        android:paddingStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_password"
        app:layout_constraintStart_toStartOf="@+id/sign_in_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="serif-monospace"
        android:text="@string/sign_up_with"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_shape_lg"
        android:drawableStart="@drawable/facebook"
        android:elevation="12dp"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_shape_lg"
        android:drawableStart="@drawable/google"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_btn"
        android:elevation="4dp"
        android:fontFamily="serif-monospace"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/go_login_user_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="serif-monospace"
        android:layout_marginBottom="65dp"
        android:text="@string/already_have_an_account"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>